--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
 
 dev_dependencies:
   browser: '>=0.10.0 <0.11.0'
-  dart_to_js_script_rewriter: '^1.0.1'
-
-transformers:
-- dart_to_js_script_rewriter
+#  dart_to_js_script_rewriter: '^1.0.1'
+#
+#transformers:
+#- dart_to_js_script_rewriter
