--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,21 +7,17 @@ description: An absolute bare-bones web app.
 environment:
   sdk: '>=1.0.0 <2.0.0'
 
-#dependencies:
-#  my_dependency: any
-
 dependencies:
-  sqljocky:
-  shelf:
   shelf_route:
-  route_hierarchical:
+  shelf:
   sqljocky:
-
-
+  route_hierarchical:
+  jsonx:
+#  my_dependency: any
 
 dev_dependencies:
   browser: '>=0.10.0 <0.11.0'
-#  dart_to_js_script_rewriter: '^1.0.1'
-#
-#transformers:
-#- dart_to_js_script_rewriter
+  dart_to_js_script_rewriter: '^1.0.1'
+
+transformers:
+- dart_to_js_script_rewriter
